--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel='stylesheet' href='assets/css/all.css'>
+    <link rel='stylesheet' href='assets/css/bootstrap.css'>
+    <link rel='stylesheet' href='assets/css/style.css'>
     <title>Green Leaf Realty</title>
   </head>
 
   <body>
     {% block content %} {% endblock %}
+
+    <script src='assets/js/jquery-3.3.1.min.js'></script>
+    <script src='assets/js/bootstrap.bundle.min.js'></script>
+    <script src='assets/js/main.js'></script>
   </body>
 
 </html>
