reconfigured css file syntax on base html. loading static complete

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -6,9 +7,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel='stylesheet' href='assets/css/all.css'>
-    <link rel='stylesheet' href='assets/css/bootstrap.css'>
-    <link rel='stylesheet' href='assets/css/style.css'>
+    <link rel='stylesheet' href="{% static 'css/all.css' %} ">
+    <link rel='stylesheet' href="{% static 'css/bootstrap.css' %} ">
+    <link rel='stylesheet' href="{% static 'css/style.css' %} ">
+    <link rel='stylesheet' href="{% static 'css/lightbox.min.css' %} ">
+
     <title>Green Leaf Realty</title>
   </head>
 
