--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -7,3 +7,7 @@
 <img src="{% static 'img/greenleaflogo.png' %}" alt="Green Leaf Realty" height="50" width="40" class="brand_img" style="margin-right: 10px;">  Admin Area
 </h1> 
 {% endblock %}
+
+{% block extrastyle %}
+<link rel="stylesheet" href="{% static 'css/admin.css' %}">
+{% endblock %}
