web titles updated per page

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %} " />
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %} " />
 
-    <title>Green Leaf Realty</title>
+    <title>Green Leaf Realty {% block title %} {% endblock %}</title>
   </head>
 
   <body>
