--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,6 +1,9 @@
 {% extends 'base.html'%} 
 {% load humanize %}
 
+{% block title %} | Listings {% endblock %}
+
+
 {% block content%}
 
 <!-- Breadcrumb -->
